--- a/app/src/main/res/layout/fragment_breed.xml
+++ b/app/src/main/res/layout/fragment_breed.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BreedFragment" >
+    tools:context=".view.BreedFragment" >
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/tbBreed"
